2008-01-23  Emmanuele Bassi  <ebassi@openedhand.com>

	* Makefile.am: Use variables, instead of substitutions.

	* clutter/clutter-private.h:
	* clutter/clutter-main.h: Make clutter_do_event() public again,
	as we need it in clutter-gtk.

	* configure.ac:
	* clutter/x11/Makefile.am:
	* clutter/x11/clutter-x11.pc.in: Add a clutter-x11 pkg-config
	file for clutter-gtk, as it depends on the X11 backend API, as
	implemented by the GLX and EGLX backends.

	* clutter/x11/clutter-event-x11.c (event_translate): Do not
	propagate DestroyNotify events if the stage doesn't own the
	window.

	* tests/test-scale.c (main): Set values different from the default.

2008-01-21  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-scale.c:
	(clutter_behaviour_scale_set_property),
	(clutter_behaviour_scale_class_init): Fix stupid typo in the
	y-scale-end property declaration. (#720)

2008-01-21  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-depth.h:
	* clutter/clutter-behaviour-depth.c:
	(clutter_behaviour_depth_set_bounds),
	(clutter_behaviour_depth_get_bounds): Add the depth-start and
	depth-end accessors.

	* tests/test-depth.c (timeline_completed): Use set_bounds()
	instead of g_object_set().

	* clutter.symbols: Add clutter_behaviour_depth_set_bounds()
	and clutter_behaviour_opacity_get_bounds() to the list of
	public symbols.

2008-01-21  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-scale.c: Use separate variables for
	storing the scale boundaries; apparently, using arrays broke
	the python bindings. (#720)

2008-01-21  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-group.c:
	Make sure unrealizing a group also unrealizes children.

	* clutter/glx/clutter-stage-glx.c:
	Chain up to group unrealize to make sure textures get unrealized
	when changing context (see #718)

	* clutter/clutter-texture.c:
	Formatting cleanups

2008-01-21  Øyvind Kolås  <pippin@gimp.org>
